--- a/espanel.html
+++ b/espanel.html
@@ -161,6 +161,7 @@
                 <span class="hintSmall" id="reviewSaveStatus"></span>
               </div>
           </div>
+            <div id="notificaciones"></div>
             <div class="card" id="inboxCard">
               <div class="sectionTitle" style="margin-top: 0">Bandeja</div>
               <div class="muted">Avisos y novedades del equipo AquiVivo.</div>
@@ -168,6 +169,7 @@
             </div>
           </div>
           <div class="referralSide">
+            <div id="mensajes"></div>
             <div class="card" id="communityCard">
               <div class="sectionTitle" style="margin-top: 0">Comunidad</div>
               <div class="muted">Conecta con otros estudiantes, agrega amigos y charla.</div>
@@ -216,6 +218,7 @@
                 </div>
               </div>
             </div>
+            <div id="ajustes"></div>
             <div class="card" id="userSettingsCard">
               <div class="sectionTitle" style="margin-top: 0">Ajustes del perfil</div>
               <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
@@ -268,6 +271,7 @@
                 <span class="hintSmall" id="settingsMsg"></span>
               </div>
             </div>
+            <div id="ayuda"></div>
             <div class="card" id="userReportCard">
               <div class="sectionTitle" style="margin-top: 0">Reportar un problema</div>
               <div class="muted">Cuentalo y lo revisamos.</div>
@@ -291,7 +295,10 @@
                 <span class="hintSmall" id="userReportStatus"></span>
               </div>
             </div>
+            <div id="referidos"></div>
+            <div id="recompensas"></div>
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
+            
             <div class="sectionTitle" style="margin-top: 0">
               🎁 Tengo código de un pana 😎
             </div>
@@ -366,6 +373,7 @@
               ></div>
             </details>
             </div>
+            <div id="pagos"></div>
             <div class="card promo-mini" id="promoMini">
               <div class="promo-mini-title">💛 Tú ganas 20%</div>
               <div class="promo-mini-sub">🤝 Tu amigo 10%</div>
@@ -374,6 +382,7 @@
           </div>
         </div>
 
+        <div id="cursos"></div>
         <div class="card coursesSection" style="margin-top: 16px">
           <div class="sectionTitle" style="margin-top: 0">📚 Cursos</div>
           <div class="muted">Selecciona un nivel para empezar.</div>
