--- a/espanel.html
+++ b/espanel.html
@@ -240,7 +240,7 @@
                   <option value="papi">Papi</option>
                 </select>
                 <select id="setLang" class="select" style="min-width: 160px">
-                  <option value="es">EspaÃ±ol</option>
+                  <option value="es">Español</option>
                   <option value="pl">Polski</option>
                 </select>
                 <select id="setGoal" class="select" style="min-width: 180px">
