--- a/esadmin.html
+++ b/esadmin.html
@@ -20,6 +20,11 @@
                 <a class="btn-white-outline" href="#accUsers">Uzytkownicy</a>
                 <a class="btn-white-outline" href="#accPromo">Kody promo</a>
                 <a class="btn-white-outline" href="#accSegments">Segmentacja</a>
+                <div style="min-width: 220px">
+                  <select class="select" id="adminQuickNav">
+                    <option value="">Skocz do sekcji...</option>
+                  </select>
+                </div>
               </div>
             </div>
           </div>
@@ -184,6 +189,77 @@
                   style="display: none; margin-top: 12px"
                 ></div>
               </div>
+              <div class="card statCard" id="statVisitsCard">
+                <div class="muted" style="font-weight: 900">Wejscia</div>
+                <div style="display: grid; gap: 6px; margin-top: 8px">
+                  <div class="hintSmall">
+                    Dzisiaj: <b id="statVisitsToday">-</b>
+                  </div>
+                  <div class="hintSmall">
+                    7 dni: <b id="statVisitsWeek">-</b>
+                  </div>
+                  <div class="hintSmall">
+                    30 dni: <b id="statVisitsMonth">-</b>
+                  </div>
+                </div>
+                <div class="hintSmall" style="margin-top: 8px">bez admina</div>
+              </div>
+            </div>
+          </div>
+        </details>
+
+        <details class="card" id="accPopup">
+          <summary class="sectionTitle">Popup / baner</summary>
+          <div style="margin-top: 12px">
+            <div class="subtitle" style="margin-bottom: 8px">
+              Ustawienia wyskakujacego okna po wejsciu lub po zalogowaniu.
+            </div>
+            <div class="panelGrid" style="grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px">
+              <div>
+                <label class="muted" style="font-weight: 900">Aktywny</label>
+                <select class="select" id="popupEnabled">
+                  <option value="true">Tak</option>
+                  <option value="false">Nie</option>
+                </select>
+              </div>
+              <div>
+                <label class="muted" style="font-weight: 900">Kiedy pokazac</label>
+                <select class="select" id="popupShowOn">
+                  <option value="visit">Po wejsciu</option>
+                  <option value="login">Po zalogowaniu</option>
+                </select>
+              </div>
+              <div>
+                <label class="muted" style="font-weight: 900">Powtarzaj</label>
+                <select class="select" id="popupRepeat">
+                  <option value="false">Tylko raz</option>
+                  <option value="true">Zawsze</option>
+                </select>
+              </div>
+              <div style="grid-column: 1 / -1">
+                <label class="muted" style="font-weight: 900">Tytul</label>
+                <input class="input" id="popupTitle" placeholder="np. Nueva clase A2!" />
+              </div>
+              <div style="grid-column: 1 / -1">
+                <label class="muted" style="font-weight: 900">Tresc</label>
+                <textarea class="input" id="popupBody" rows="3" placeholder="Krotki opis..."></textarea>
+              </div>
+              <div>
+                <label class="muted" style="font-weight: 900">CTA label</label>
+                <input class="input" id="popupCtaLabel" placeholder="np. Ver ahora" />
+              </div>
+              <div>
+                <label class="muted" style="font-weight: 900">CTA URL</label>
+                <input class="input" id="popupCtaUrl" placeholder="https://..." />
+              </div>
+              <div style="grid-column: 1 / -1">
+                <label class="muted" style="font-weight: 900">Obrazek (URL)</label>
+                <input class="input" id="popupImageUrl" placeholder="https://.../banner.jpg" />
+              </div>
+            </div>
+            <div class="metaRow" style="gap: 10px; margin-top: 12px">
+              <button class="btn-yellow" id="btnSavePopup" type="button">Zapisz popup</button>
+              <span class="hintSmall" id="popupStatus"></span>
             </div>
           </div>
         </details>
