--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -236,6 +236,9 @@
               </button>
               <button class="btn-red" id="registerBtn" type="button">
                 Regístrate
+              </button>
+              <button class="btn-white-outline" id="googleLoginBtn" type="button">
+                Inicia con Google
               </button>
             </div>
             <button class="reset-link" type="button" id="resetPasswordBtn">
