--- a/esadmin.html
+++ b/esadmin.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <title>Admin | AquiVivo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="assets/css/styles.css" rel="stylesheet" />
-    <script src="assets/js/layout.js" type="module"></script>
+    <link href="assets/css/styles.css?v=20260205c" rel="stylesheet" />
+    <script src="assets/js/layout.js?v=20260205c" type="module"></script>
   </head>
   <body data-page="esadmin">
     <div id="appHeader"></div>
+    <aside id="sidePanel" class="side-panel side-panel--admin"></aside>
     <main class="page">
       <div class="container">
         <section class="heroBanner">
@@ -1402,7 +1403,7 @@
       </div>
     </div>
     <script src="assets/js/firebase-init.js" type="module"></script>
-    <script src="assets/js/pages/esadmin-page.js" type="module"></script>
+    <script src="assets/js/pages/esadmin-page.js?v=20260205c" type="module"></script>
   </body>
 </html>
 
