--- a/espanel.html
+++ b/espanel.html
@@ -207,96 +207,17 @@
                 </div>
                 <div class="communityCol">
                   <div class="subtitle" style="margin: 0">Mensajes</div>
-                  <div class="muted" id="chatHint" style="margin-top: 4px">Selecciona un amigo para chatear.</div>
-                  <div id="chatHeader" class="chatHeader" style="margin-top: 10px"></div>
-                  <div id="chatMessages" class="chatBox" style="margin-top: 10px"></div>
-                  <div class="metaRow chatInputRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
-                    <input id="chatInput" class="input" placeholder="Escribe un mensaje..." style="min-width: 220px; flex: 1" />
-                    <button id="btnSendMessage" class="btn-white-outline" type="button">Enviar</button>
+                  <div class="muted" style="margin-top: 4px">
+                    Usa la nueva bandeja de mensajes para chats, grupos y soporte.
                   </div>
-                  <div id="chatStatus" class="hintSmall" style="margin-top: 6px"></div>
+                  <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+                    <a class="btn-yellow" href="mensajes.html">Abrir mensajes</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div id="ajustes"></div>
-            <div class="card" id="userSettingsCard">
-              <div class="sectionTitle" style="margin-top: 0">Ajustes del perfil</div>
-              <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
-                <input
-                  id="setHandle"
-                  class="input"
-                  placeholder="Usuario (ej: magda_23)"
-                  style="min-width: 220px"
-                />
-                <input
-                  id="setDisplayName"
-                  class="input"
-                  placeholder="Nombre visible"
-                  style="min-width: 220px"
-                />
-                <select id="setGender" class="select" style="min-width: 160px">
-                  <option value="">Saludo neutro</option>
-                  <option value="mami">Mami</option>
-                  <option value="papi">Papi</option>
-                </select>
-                <select id="setLang" class="select" style="min-width: 160px">
-                  <option value="es">Español</option>
-                  <option value="pl">Polski</option>
-                </select>
-                <select id="setGoal" class="select" style="min-width: 180px">
-                  <option value="5">Meta: 5 min</option>
-                  <option value="10">Meta: 10 min</option>
-                  <option value="15">Meta: 15 min</option>
-                  <option value="20">Meta: 20 min</option>
-                </select>
-                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
-                  <input id="setReviewReminders" type="checkbox" />
-                  Recordatorios de repaso
-                </label>
-                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
-                  <input id="setPublicProfile" type="checkbox" />
-                  Perfil publico
-                </label>
-                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
-                  <input id="setAllowFriendRequests" type="checkbox" />
-                  Permitir solicitudes
-                </label>
-                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
-                  <input id="setAllowMessages" type="checkbox" />
-                  Permitir mensajes
-                </label>
-                <button class="btn-white-outline" id="btnSaveSettings" type="button">
-                  Guardar
-                </button>
-                <span class="hintSmall" id="settingsMsg"></span>
-              </div>
-            </div>
-            <div id="ayuda"></div>
-            <div class="card" id="userReportCard">
-              <div class="sectionTitle" style="margin-top: 0">Reportar un problema</div>
-              <div class="muted">Cuentalo y lo revisamos.</div>
-              <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap; align-items: flex-end">
-                <select id="userReportType" class="select" style="min-width: 180px">
-                  <option value="bug">Bug</option>
-                  <option value="content">Contenido</option>
-                  <option value="payment">Pago</option>
-                  <option value="other" selected>Otro</option>
-                </select>
-                <select id="userReportLevel" class="select" style="min-width: 160px">
-                  <option value="">Nivel (opcional)</option>
-                  <option value="A1">A1</option>
-                  <option value="A2">A2</option>
-                  <option value="B1">B1</option>
-                  <option value="B2">B2</option>
-                </select>
-                <input id="userReportTopic" class="input" placeholder="ID tema (opcional)" style="min-width: 200px" />
-                <input id="userReportMessage" class="input" placeholder="Describe el problema..." style="min-width: 260px; flex: 1" />
-                <button class="btn-white-outline" id="btnUserReport" type="button">Enviar</button>
-                <span class="hintSmall" id="userReportStatus"></span>
-              </div>
-            </div>
             <div id="referidos"></div>
-            <div id="recompensas"></div>
+<div id="recompensas"></div>
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
             
             <div class="sectionTitle" style="margin-top: 0">
@@ -633,3 +554,4 @@
     <script type="module" src="assets/js/pages/panel-page.js"></script>
   </body>
 </html>
+
